[FLINK-2343] [scripts] Make CMS the default GC for streaming setups
This closes #901